good enough for now

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 				<p class="title">@incrediferous</p>
 				<p class="title">DESIGNER/ WEB DEVELOPER</p>
 				<p class="summary">
-				DESIGN DRIVEN DEVELOPER, SOLVING COMPLEXITIES OF THE BUILT ENVIRONMENT THROUGH ELEGANT AND CREATIVE SOLUTIONS
+				DESIGN DRIVEN DEVELOPER, SOLVING COMPLEXITIES OF THE BUILT ENVIRONMENT THROUGH ELEGANT AND CREATIVE SOLUTIONS.
 				</p>
+
 				<div class="social">
-					<a class=""><i class="fa fa-github-alt fa-md"></i></a>
-					<a class=""><i class="fa fa-linkedin fa-md"></i></a>
-					<a class=""><i class="fa fa-twitter fa-md"></i></a>
-					<a class=""><i class="fa fa-tumblr fa-md"></i></a> 
-					<a class=""><i class="fa fa-flickr fa-md"></i></a>
-					<a class=""><i class="fa fa-instagram fa-md"></i></a>
+					<a href="https://github.com/indotek68"><i class="fa fa-github-alt fa-md"></i></a>
+					<a href="https://www.linkedin.com/in/aputra" class=""><i class="fa fa-linkedin fa-md"></i></a>
+					<a href="https://twitter.com/incrediferous" class=""><i class="fa fa-twitter fa-md"></i></a>
+					<a href="http://fohtoh.tumblr.com/" class=""><i class="fa fa-tumblr fa-md"></i></a> 
+					<a href="https://www.flickr.com/photos/59205695@N04/" class=""><i class="fa fa-flickr fa-md"></i></a>
+					<a href="http://instagram.com/incrediferous" class=""><i class="fa fa-instagram fa-md"></i></a>
 				</div>  
 				<div class="info">
 					<p>
